# ma5p1-dissertation-code

./: .gitignore  .pre-commit-config.yaml  README.md  dualiser.py  dualiser.r  main.py  pyproject.toml  requirements.txt
src/: dualiser.py  graphs.py  main.py
