[build-system]
requires = ["setuptools >= 69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ma5p1-dissertation-code"
version = "0.0.0"
description = "Code used in the _On Sets Defining Few Ordinary Lines_ dissertation at the University of Warwick (2018)."
readme = "README.md"
requires-python = ">= 3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.isort]
profile = "black"
